# autorace

./: .gitmodules  CMakeLists.txt  READMD.adoc  READMD.md  START.md  autoracea_pc_ws.code-workspace  camera adjustment  camera parameter
detect_line/: CMakeLists.txt  package.xml
detect_line/include/detect_line/: detect_line.hpp
detect_line/launch/: detect_line.launch
detect_line/param/: black_color.yaml
detect_line/src/: detect_line.cpp
detect_line/test/: node_test.cpp
docker/: Dockerfile  build.sh  run.sh
docker/config/: run_setup_script.sh
docker/config/editor/: nanorc  vimrc
docker/config/pip/: requirements.txt
docker/config/script/: editor_setup.sh  pip_setup.sh  ros_setup.sh  shell_setup.sh
docker/config/shell/zsh/: .p10k.zsh
docker_pytorch-ros/: Dockerfile  Dockerfile_aarch64  Dockerfile_x86_64  build.sh  entrypoint.sh  get_param.sh  run.sh
docker_pytorch-ros/config/pip/: requirements.txt
docker_pytorch-ros/config/shell/: bash_setup.sh
docker_pytorch-ros/config/shell/tmux/: tmux.conf
initial/: README.adoc
initial/opencr_update/: om_with_tb3.opencr
initial/usb_rules/: 99_autorace_device.rules  create_rule.sh  delete_rule.sh
initial/xavier_jetPack5.1_initial/: README.adoc  iwlwifi-ty-59.601f3a66.0.tgz  powermode.sh  set.txt  wifi.sh
install_dep/: 01-installer-config-wifi.yaml
install_dep/usb_rules/: 99-turtlebot3-cdc.rules  99-usb-cam.rules  usb_setup.sh
lib/: CMakeLists.txt  package.xml
lib/include/lib/: node_handle.hpp
lib/src/: node_handle.cpp
lib/test/: node_test.cpp
turtlebot3_autorace_2020/turtlebot3_autorace_2020/: package.xml
turtlebot3_autorace_2020/turtlebot3_autorace_camera/calibration/camera_calibration/: camera.yaml  usb_camera.yaml
turtlebot3_autorace_2020/turtlebot3_autorace_camera/calibration/extrinsic_calibration/: projection (copy).yaml  projection.yaml
turtlebot3_autorace_2020/turtlebot3_autorace_camera/calibration/intrinsic_calibration/: camerav2_320x240_30fps.yaml  usbcamerav2_640x480_30fps.yaml
turtlebot3_autorace_2020/turtlebot3_autorace_camera/cfg/: ImageCompensationParams.cfg  ImageProjectionParams.cfg
turtlebot3_autorace_2020/turtlebot3_autorace_camera/launch/: turtlebot3_autorace_camera_pi.launch  turtlebot3_autorace_camera_usb.launch  turtlebot3_autorace_extrinsic_camera_calibration.launch
turtlebot3_autorace_2020/turtlebot3_autorace_camera/nodes/: image_projection
turtlebot3_autorace_2020/turtlebot3_autorace_control/: CMakeLists.txt  package.xml
turtlebot3_autorace_2020/turtlebot3_autorace_control/launch/: turtlebot3_autorace_control_intersection.launch  turtlebot3_autorace_control_lane.launch  turtlebot3_autorace_control_moving.launch  turtlebot3_autorace_control_parking.launch  turtlebot3_autorace_control_tunnel.launch
turtlebot3_autorace_2020/turtlebot3_autorace_control/nodes/: control_intersection  control_lane  control_moving
turtlebot3_autorace_2020/turtlebot3_autorace_core/: CMakeLists.txt
turtlebot3_autorace_2020/turtlebot3_autorace_core/launch/: turtlebot3_autorace_core.launch
turtlebot3_autorace_2020/turtlebot3_autorace_core/nodes/: core_mode_decider  core_node_controller
turtlebot3_autorace_2020/turtlebot3_autorace_detect/: CMakeLists.txt
turtlebot3_autorace_2020/turtlebot3_autorace_detect/cfg/: DetectLaneParams.cfg
turtlebot3_autorace_2020/turtlebot3_autorace_detect/costom_vision/: OCR.py  labels.txt  signRECG.py
turtlebot3_autorace_2020/turtlebot3_autorace_detect/costom_vision/bak/: labels.txt
turtlebot3_autorace_2020/turtlebot3_autorace_detect/launch/: turtlebot3_autorace_detect_construction.launch  turtlebot3_autorace_detect_lane.launch  turtlebot3_autorace_detect_level.launch  turtlebot3_autorace_detect_parking.launch  turtlebot3_autorace_detect_parking_lane.launch  turtlebot3_autorace_detect_sign.launch  turtlebot3_autorace_detect_traffic_light.launch
turtlebot3_autorace_2020/turtlebot3_autorace_detect/nodes/: detect_construction  detect_lane  detect_level  detect_parking  detect_parking_lane  detect_sign  detect_sign_bak  detect_traffic_light
turtlebot3_autorace_2020/turtlebot3_autorace_detect/param/lane/: lane.yaml
turtlebot3_autorace_2020/turtlebot3_autorace_detect/param/level/: level (copy).yaml  level.yaml
turtlebot3_autorace_2020/turtlebot3_autorace_detect/param/traffic_light/: traffic_light (copy).yaml  traffic_light.yaml
usb_cam/nodes/: usb_cam_node.cpp
usb_rules/: de0_uart_drive.rules  lidar_uart_drive.rules
vision/: package.xml
vision/config/: tb3 (default).yaml  tb3.yaml
vision/image_converter/: CMakeLists.txt  image_converter.cpp  image_converter.h  main.cpp  nodehandle.cpp  nodehandle.h
vision/launch/: vision.launch
vision/msg/: aim.msg  aim2.msg  color.msg
web/auto_web/: auto_race.html
web/auto_web/css/: form.css
web/auto_web/js/: KeyboardControl.js  init.js  variable.js
web/auto_web/js/ros/: RosParameter.js  Rostopic.js  video.js
web/tb3_web/: tb3_race.html
web/tb3_web/js/: KeyboardControl.js  init.js
web/tb3_web/js/ros/: RosParameter.js  Rosservice.js  Rostopic.js  video.js
xavier_jetPack5.1_initial/: .powermode.sh.swp
