<?xml version="1.0"?>
<package format="2">
  <name>detect_line</name>
  <version>0.1.0</version>
  <description>The detect_line package</description>
  <maintainer email="ycpss91255@gmail.com">cyc</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>lib</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>


  <export>

  </export>
</package>
